add_subdirectory(arm_smmu)
add_subdirectory(cpu_arm)
add_subdirectory(cpu_riscv)
add_subdirectory(cpu_hexagon)
add_subdirectory(display)
add_subdirectory(global_peripheral_initiator)
add_subdirectory(hexagon_globalreg)
add_subdirectory(irq-ctrl)
add_subdirectory(nvme)
add_subdirectory(opencores_eth)
add_subdirectory(pci)
add_subdirectory(reset_gpio)
add_subdirectory(timer)
add_subdirectory(uart)
add_subdirectory(usb)
add_subdirectory(virtio_keyboard_pci)
add_subdirectory(virtio_mmio_blk)
add_subdirectory(virtio_mmio_net)
add_subdirectory(virtio_mmio_sound)
add_subdirectory(virtio_mouse_pci)
add_subdirectory(virtio_mmio_gpugl)
add_subdirectory(qmp)
add_subdirectory(sifive_test)
add_subdirectory(ufs)
add_subdirectory(ufs_lu)
add_subdirectory(vnc)
add_subdirectory(pl031)
add_subdirectory(pflash_cfi)
add_subdirectory(fw_cfg)
