add_subdirectory(addrtr)
add_subdirectory(backends)
add_subdirectory(exclusive_monitor)
add_subdirectory(keep_alive)
add_subdirectory(loader)
add_subdirectory(macs)
add_subdirectory(gs_memory)
add_subdirectory(memory_dumper)
add_subdirectory(pass)
if((NOT WITHOUT_PYTHON_BINDER) AND (NOT GS_ONLY))
    add_subdirectory(python_binder)
endif()
add_subdirectory(router)
add_subdirectory(reg_router)
add_subdirectory(timeprinter)
add_subdirectory(tlm_bus_width_bridges)
add_subdirectory(uart)
add_subdirectory(realtimelimiter)
add_subdirectory(dmi_converter)
add_subdirectory(monitor)
